--- a/index.html
+++ b/index.html
@@ -18,31 +18,21 @@
     </header>
     <main>
         <div id="dockerMeetOptions" class="flex">
-            <div class="meetFunctions flex">
-                <span class="material-symbols-outlined">
-                    front_hand
-                </span>
-            </div>
-            <div class="meetFunctions flex">
-                <span class="material-symbols-outlined">
-                    videocam
-                </span>
-            </div>
-            <div id="callEnd" class="meetFunctions flex">
-                <span class="material-symbols-outlined">
-                    call_end
-                </span>
-            </div>
-            <div class="meetFunctions flex">
-                <span class="material-symbols-outlined">
-                    mic
-                </span>
-            </div>
-            <div class="meetFunctions">
-                <span class="material-symbols-outlined">
-                    more_vert
-                </span>
-            </div>
+            <span class="material-symbols-outlined meetFunctions flex">
+                front_hand
+            </span>
+            <span id="videocam" class="material-symbols-outlined meetFunctions flex">
+                videocam_off
+            </span>
+            <span id="#callEnd" class="material-symbols-outlined meetFunctions flex">
+                call_end
+            </span>
+            <span id="mic" class="material-symbols-outlined meetFunctions flex">
+                mic_off
+            </span>
+            <span class="material-symbols-outlined meetFunctions flex">
+                more_vert
+            </span>
         </div>
     </main>
 
