--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span id="videocam" class="material-symbols-outlined meetFunctions flex">
                 videocam_off
             </span>
-            <span id="#callEnd" class="material-symbols-outlined meetFunctions flex">
+            <span id="callEnd" class="material-symbols-outlined flex">
                 call_end
             </span>
             <span id="mic" class="material-symbols-outlined meetFunctions flex">
