--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <main>
         <div id="dockerMeetOptions" class="flex">
-            <span class="material-symbols-rounded meetFunctions flex">
-                front_hand
+            <span class="material-symbols-rounded meetFunctions flex active">
+                back_hand
             </span>
             <span id="videocam" class="material-symbols-rounded meetFunctions flex">
                 videocam_off
@@ -35,6 +35,5 @@
             </span>
         </div>
     </main>
-
 </body>
 </html>
