--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <div id="dockerMeetOptions" class="flex">
-            <span class="material-symbols-rounded meetFunctions flex active">
+            <span class="material-symbols-rounded meetFunctions flex">
                 back_hand
             </span>
             <span id="videocam" class="material-symbols-rounded meetFunctions flex">
@@ -33,6 +33,8 @@
             <span class="material-symbols-rounded meetFunctions flex">
                 more_vert
             </span>
+
+            <script src="js/functions.js"></script>
         </div>
     </main>
 </body>
