--- a/index.html
+++ b/index.html
@@ -21,18 +21,10 @@
             <span class="material-symbols-rounded meetFunctions flex">
                 back_hand
             </span>
-            <span id="videocam" class="material-symbols-rounded meetFunctions flex">
-                videocam_off
-            </span>
-            <span id="callEnd" class="material-symbols-rounded meetFunctions">
-                call_end
-            </span>
-            <span id="mic" class="material-symbols-rounded meetFunctions flex">
-                mic_off
-            </span>
-            <span class="material-symbols-rounded meetFunctions flex">
-                more_vert
-            </span>
+            <span id="videocam" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
+            <span id="callEnd" class="material-symbols-rounded meetFunctions">call_end</span>
+            <span id="mic" class="material-symbols-rounded meetFunctions flex">mic_off</span>
+            <span class="material-symbols-rounded meetFunctions flex">more_vert</span>
 
             <script src="js/functions.js"></script>
         </div>
