--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <span id="btnBack" class="material-symbols-rounded">
-            arrow_back_ios
+            chevron_left
         </span>
         <div id="titleMenu">
             <p>xhe-fghm-jki</p>
