adicionada a docker de opções

--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
         </div>
     </header>
     <main>
-        <div id="dockerMeetOptions" class="flex">
-            <span class="material-symbols-rounded meetFunctions flex">
-                back_hand
-            </span>
+        <div id="dockerMeetFunctions" class="flex">
+            <span class="material-symbols-rounded meetFunctions flex">back_hand</span>
             <span id="videocam" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
             <span id="callEnd" class="material-symbols-rounded meetFunctions">call_end</span>
             <span id="mic" class="material-symbols-rounded meetFunctions flex">mic_off</span>
-            <span class="material-symbols-rounded meetFunctions flex">more_vert</span>
-
-            <script src="js/functions.js"></script>
+            <span id="moreOptions" class="material-symbols-rounded meetFunctions flex">more_vert</span>
+        </div>
+        <div id="dockerOptions">
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
+            <div class="options"></div>
         </div>
     </main>
+
+    <script src="js/functions.js"></script>
 </body>
 </html>
