--- a/index.html
+++ b/index.html
@@ -24,14 +24,36 @@
             <span id="mic" class="material-symbols-rounded meetFunctions flex">mic_off</span>
             <span id="moreOptions" class="material-symbols-rounded meetFunctions flex">more_vert</span>
         </div>
+
         <div id="dockerOptions">
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
-            <div class="options"></div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">person_add</span>
+                <p>Adicionar pessoas</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">forum</span>
+                <p>Mensagens na chamada</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">present_to_all</span>
+                <p>Compartilhar tela</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">closed_caption</span>
+                <p>Ativar legendas</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">chat_info</span>
+                <p>Informar um problema</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">report</span>
+                <p>Denunciar abuso</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">settings</span>
+                <p>Configurações</p>
+            </div>
         </div>
     </main>
 
