--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </div>
     </header>
     <main>
+        <div id="userView">
+            <span id="userHand" class="material-symbols-rounded flex">front_hand</span>
+            <img id="userImage" src="img/wallpaper.jpeg" alt="">
+            <span id="floatScreenResizer" class="material-symbols-rounded flex">fullscreen_exit</span>
+        </div>
         <div id="dockerMeetFunctions" class="flex">
             <span class="material-symbols-rounded meetFunctions flex">back_hand</span>
             <span id="videocam" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
