--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
 
         <div id="dockerOptions">
             <div class="options">
-                <span id="moreOptions" class="material-symbols-rounded">person_add</span>
-                <p>Adicionar pessoas</p>
-            </div>
-            <div class="options">
                 <span id="moreOptions" class="material-symbols-rounded">forum</span>
                 <p>Mensagens na chamada</p>
             </div>
@@ -52,12 +48,24 @@
                 <p>Informar um problema</p>
             </div>
             <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">settings</span>
+                <p>Configurações</p>
+            </div>
+            <div class="options">
                 <span id="moreOptions" class="material-symbols-rounded">report</span>
                 <p>Denunciar abuso</p>
             </div>
             <div class="options">
-                <span id="moreOptions" class="material-symbols-rounded">settings</span>
-                <p>Configurações</p>
+                <span id="moreOptions" class="material-symbols-rounded">lock_person</span>
+                <p>Controle do Organizador</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">category</span>
+                <p>Atividades</p>
+            </div>
+            <div class="options">
+                <span id="moreOptions" class="material-symbols-rounded">directions_walk</span>
+                <p>Em movimento</p>
             </div>
         </div>
     </main>
