--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
     </header>
     <main>
         <div id="userView">
-            <span id="userHand" class="material-symbols-rounded flex">front_hand</span>
-            <img id="userImage" src="img/wallpaper.jpeg" alt="">
-            <span id="floatScreenResizer" class="material-symbols-rounded flex">fullscreen_exit</span>
+            <div id="userHandBox">
+                <span id="userHandCallBack" class="material-symbols-rounded flex">front_hand</span>
+            </div>
+            <div id="userImageBox">
+                <img id="userImage" src="img/wallpaper.jpeg" alt="">
+            </div>
+            <div id="floatScreenResizerBox">
+                <span id="floatScreenResizer" class="material-symbols-rounded flex">fullscreen_exit</span>
+            </div>
         </div>
         <div id="dockerMeetFunctions" class="flex">
-            <span class="material-symbols-rounded meetFunctions flex">back_hand</span>
+            <span id="userHand" class="material-symbols-rounded meetFunctions flex">back_hand</span>
             <span id="videocam" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
             <span id="callEnd" class="material-symbols-rounded meetFunctions">call_end</span>
             <span id="mic" class="material-symbols-rounded meetFunctions flex">mic_off</span>
