--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             </div>
             <div id="userImageBox">
                 <img id="userImage" src="img/wallpaper.jpeg" alt="">
+                <span id="videocam2" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
+                <span id="mic2" class="material-symbols-rounded meetFunctions flex">mic_off</span>
             </div>
             <div id="floatScreenResizerBox">
                 <span id="floatScreenResizer" class="material-symbols-rounded flex">fullscreen_exit</span>
