--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </div>
     </header>
     <main>
-        <div id="userView">
+        <div id="userView" class="">
+            <span id="videocam" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
+            <span id="mic" class="material-symbols-rounded meetFunctions flex">mic_off</span>
             <div id="userHandBox">
                 <span id="userHandCallBack" class="material-symbols-rounded flex">front_hand</span>
             </div>
             <div id="userImageBox">
                 <img id="userImage" src="img/wallpaper.jpeg" alt="">
-                <span id="videocam2" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
-                <span id="mic2" class="material-symbols-rounded meetFunctions flex">mic_off</span>
             </div>
             <div id="floatScreenResizerBox">
                 <span id="floatScreenResizer" class="material-symbols-rounded flex">fullscreen_exit</span>
