--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </header>
     <main>
-        <div id="userView" class="">
+        <div id="userView">
             <span id="videocam" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
             <span id="mic" class="material-symbols-rounded meetFunctions flex">mic_off</span>
             <div id="userHandBox">
@@ -30,7 +30,7 @@
                 <span id="floatScreenResizer" class="material-symbols-rounded flex">fullscreen_exit</span>
             </div>
         </div>
-        <div id="dockerMeetFunctions" class="flex">
+        <div id="dockerMeetFunctions">
             <span id="userHand" class="material-symbols-rounded meetFunctions flex">back_hand</span>
             <span id="videocam" class="material-symbols-rounded meetFunctions flex">videocam_off</span>
             <span id="callEnd" class="material-symbols-rounded meetFunctions">call_end</span>
